--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,7 @@ AC_SUBST(HVERSION, "\"0.1\"")
 AC_SUBST(AUTHOR, "\"Jonas Herzig\"")
 AC_SUBST(COPYRIGHT, "'(2018)")
 AC_SUBST(LICENSE, gpl3+)
-AC_CONFIG_SRCDIR(language-server.scm)
+AC_CONFIG_SRCDIR(language-server)
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([1.12 gnu silent-rules subdir-objects  color-tests parallel-tests -Woverride -Wno-portability])
 AM_SILENT_RULES([yes])
